test/files/neg/annot-nonconst.check
annot-nonconst.scala:6: error: annotation argument needs to be a constant; found: Test.this.n
  @Length(n) def foo = "foo"
          ^
annot-nonconst.scala:7: error: annotation argument cannot be null
  @Ann2(null) def bar = "bar"
        ^
two errors found
